ML - write up added

--- a/jupyter_notebooks/ML.ipynb
+++ b/jupyter_notebooks/ML.ipynb
@@ -17,7 +17,7 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* To perform exploratory data analysis\n",
+        "* To use ML to forecast AQI 7 days ahead\n",
         "\n",
         "## Inputs\n",
         "\n",
@@ -25,7 +25,7 @@
         "\n",
         "## Outputs\n",
         "\n",
-        "* Various plots (histogram, box plot, scatter plot etc.) to understand the distribution and correlation between variables, along with statistical tests"
+        "* Best model and model evaluation"
       ]
     },
     {
@@ -203,8 +203,6 @@
         "import seaborn as sns\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.compose import ColumnTransformer\n",
-        "from sklearn.preprocessing import QuantileTransformer\n",
-        "from feature_engine.transformation import YeoJohnsonTransformer\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
         "from sklearn.feature_selection import SelectFromModel\n",
@@ -237,6 +235,13 @@
       "metadata": {},
       "source": [
         "## Load the Dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "I load the dataset using Pandas."
       ]
     },
     {
@@ -516,6 +521,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Ensure \"Date Local\" is datetime."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 101,
       "metadata": {},
@@ -537,7 +549,21 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Keping Cities with Enough Data for Modelling"
+        "## Keeping Cities with Enough Data for Modelling"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In order to accurately model and forecast AQI, ther needs to be sufficient data. I am going to see which cities have enough data to model and drop cities which don't.  "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "First, I'l like to check how many unique cities there are."
       ]
     },
     {
@@ -561,41 +587,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 103,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Rows with invalid dates: 0\n",
-            "            Date Local           \n",
-            "                   min        max\n",
-            "City                             \n",
-            "Albuquerque 2012-01-01 2015-12-31\n",
-            "Alexandria  2012-03-31 2012-08-21\n",
-            "Austin      2012-11-30 2014-07-01\n",
-            "Birmingham  2013-12-01 2016-05-31\n",
-            "Blaine      2012-03-13 2015-12-28\n"
-          ]
-        }
-      ],
       "source": [
-        "# 2. Drop rows with invalid dates (if any)\n",
-        "bad_dates = df['Date Local'].isna().sum()\n",
-        "print(f\"Rows with invalid dates: {bad_dates}\")\n",
-        "\n",
-        "# 3. Sort\n",
-        "df = df.sort_values(['City', 'Date Local']).reset_index(drop=True)\n",
-        "\n",
-        "# 4. Quick checks\n",
-        "print(df[['City','Date Local']].groupby('City').agg(['min','max']).head())"
+        "Now, I'm going to look at how many available and missing days there are for each city. The total maximum number of days for this dataset (2012-01-01 to 2016-05-31) is 1613."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -780,7 +780,7 @@
         "city_day_counts = df.groupby('City')['Date Local'].nunique()\n",
         "\n",
         "# Expected number of days (including leap years)\n",
-        "expected_days = len(full_range)  # 1827 days total\n",
+        "expected_days = len(full_range)  # 1613 days total\n",
         "\n",
         "# Identify which cities have full coverage\n",
         "complete_cities = city_day_counts[city_day_counts == expected_days].index\n",
@@ -796,6 +796,13 @@
         "}).sort_values('Days available', ascending=False)\n",
         "\n",
         "city_coverage.head(20)  # shows top 20 cities by coverage"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Looking at the top 20 cities with the most data, I've decided to apply a cut off so that cities with less than 1400 daily values will be dropped."
       ]
     },
     {
@@ -823,6 +830,13 @@
         "\n",
         "print(f\"Keeping {len(cities_to_keep)} cities:\")\n",
         "print(cities_to_keep)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This leaves 11 cities, as detailed above."
       ]
     },
     {
@@ -986,6 +1000,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Next, I'm going to check the date range of these 11 cities. This will help me to decide which dates to use to separate the train and test sets."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 107,
       "metadata": {},
@@ -1031,6 +1052,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Based on this information, I will separate the sets by:\n",
+        "- train; 2012-01-01 2014-12-31 \n",
+        "- test; 2015-01-01 2016-05-31"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "---"
       ]
     },
@@ -1039,6 +1069,13 @@
       "metadata": {},
       "source": [
         "## Addition of Lag and Rolling Features"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "To help with forecasting, I am adding 1 - 3 days lag and 7 day rolling average feature columns. This adds information about short term variance and also longer term averages to help with prediction."
       ]
     },
     {
@@ -1259,6 +1296,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Next, I am going to convert month names into numers, and then convert them into cyclical features that repeat after each other, to help the model understand the seasonal pattern. For that we use sine and cosine functions."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 109,
       "metadata": {},
@@ -1474,6 +1518,13 @@
       "metadata": {},
       "source": [
         "## Drop Unwanted Variables"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here, I will drop the features that won't be used for modelling. I am leaving in \"Date Local\" for now, because I will use it for plotting later."
       ]
     },
     {
@@ -1794,6 +1845,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here, I encode the dates that will be used to split the train and test sets."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 112,
       "metadata": {},
@@ -1805,6 +1863,13 @@
         "# Set test: 2015-01-01 to 2016-05-31 (your last date)\n",
         "test_start = pd.Timestamp(\"2015-01-01\")\n",
         "test_end = pd.Timestamp(\"2016-05-31\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The train and test sets are defined and I can see their shape. This has worked out nicely, with ~ 75 % of data for train and 25 % for test."
       ]
     },
     {
@@ -1830,6 +1895,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "I am saving \"Date Local\" and \"City\" as a separate DataFrame to be used for plotting later."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 114,
       "metadata": {},
@@ -1837,6 +1909,13 @@
       "source": [
         "# Keep auxiliary columns for plotting\n",
         "plot_test = test_df[[\"Date Local\", \"City\"]].copy()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here, I split the datasets defined above into features (X) and target (y)."
       ]
     },
     {
@@ -1883,6 +1962,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "I define the pipeline, which uses a preprocessor step to scale numeric variables and One Hot encode categorical variables."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 116,
       "metadata": {},
@@ -1912,6 +1998,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "These are the models I will be testing in the limited time I have. They are tree-based models because they usually handle non-linear interactions (weather conditions, lags) better."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 117,
       "metadata": {},
@@ -1923,6 +2016,13 @@
         "    \"HGBoosting\": HistGradientBoostingRegressor(random_state=0),\n",
         "    \"XGBRegressor\": XGBRegressor(random_state=0),\n",
         "}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "I am using default hyperparameters for each one."
       ]
     },
     {
@@ -1940,6 +2040,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This type of cross-validation is important for time series because it keep temporal order instead of randomly shuffling data."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 119,
       "metadata": {},
@@ -1947,6 +2054,13 @@
       "source": [
         "# Use 3 folds; adjust based on your train set length\n",
         "tscv = TimeSeriesSplit(n_splits=3)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here, I use GridSearchCV to find the best model, based on mean absolute error (MAE), which is the average size of errors ignoring any directionality. "
       ]
     },
     {
@@ -2000,31 +2114,10 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Best CV MAE: 12.417289229874969\n",
-            "Best parameters: {}\n"
-          ]
-        }
-      ],
       "source": [
-        "# Best model from GridSearchCV\n",
-        "best_model = grid.best_estimator_\n",
-        "\n",
-        "# Best hyperparameters\n",
-        "best_params = grid.best_params_\n",
-        "\n",
-        "# Best CV score (negative MAE, if scoring='neg_mean_absolute_error')\n",
-        "best_cv_mae = -grid.best_score_\n",
-        "\n",
-        "print(\"Best CV MAE:\", best_cv_mae)\n",
-        "print(\"Best parameters:\", best_params)"
+        "I'll print the table sorted by MAE."
       ]
     },
     {
@@ -2100,6 +2193,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "I want to grab the best model and parameters - Gradient Boosting Regressor with default parameters."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 124,
       "metadata": {},
@@ -2126,6 +2226,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now I can fit the the model to the full training set and predict using the test set."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 125,
       "metadata": {},
@@ -2143,44 +2250,41 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "from sklearn.metrics import mean_absolute_error, r2_score\n",
-        "\n",
-        "test_mae = mean_absolute_error(y_test, y_pred)\n",
-        "test_r2 = r2_score(y_test, y_pred)\n",
-        "\n",
-        "print(f\"Test MAE: {test_mae:.3f}\")\n",
-        "print(f\"Test R²: {test_r2:.3f}\")"
+        "Here, I evaluate the test set. MAE was explained above; RMSE is root mean squared error, it squares the errors before averaging, giving more weight to larger errors and making it more sensitive to outliers."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 137,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Test MAE: 9.69\n",
-            "Test MSE: 259.46\n",
-            "Test R²: 0.26\n"
+            "RMSE: 16.859156127974487\n",
+            "MAE: 10.248142038032968\n"
           ]
         }
       ],
       "source": [
-        "# Metrics\n",
-        "mae = mean_absolute_error(y_test, y_pred)\n",
-        "mse = mean_squared_error(y_test, y_pred)\n",
-        "r2 = r2_score(y_test, y_pred)\n",
+        "# Calculate RMSE\n",
+        "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+        "print(\"RMSE:\", rmse)\n",
         "\n",
-        "print(f\"Test MAE: {mae:.2f}\")\n",
-        "print(f\"Test MSE: {mse:.2f}\")\n",
-        "print(f\"Test R²: {r2:.2f}\")"
+        "# Optional: also MAE for comparison\n",
+        "mae = mean_absolute_error(y_test, y_pred)\n",
+        "print(\"MAE:\", mae)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This suggests that the model’s predictions have an average error of about 10 AQI units (MAE), meaning that, on average, the predicted AQI is off by 10 from the true value. The RMSE is higher at ~17, which indicates that there are some larger errors or spikes where the model under- or over-predicts AQI more substantially. Overall, the model captures the general trend reasonably well, but occasional extreme deviations contribute to the higher RMSE."
       ]
     },
     {
@@ -2188,6 +2292,20 @@
       "metadata": {},
       "source": [
         "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Extract Important Features"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Here, I will extract important features and plot them."
       ]
     },
     {
@@ -2337,6 +2455,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Plot Actual and Predicted AQIs"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "First, I will plot all actual and predicted AQIs for each city onto on plot. This will be a very busy plot but it will me a good idea of how everything looks."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -2380,6 +2519,20 @@
         "plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
         "plt.tight_layout()\n",
         "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "I can see that overall, the predicted values follow the same trend very well, but the minimum, and especially the maximum, spikes are not well predicted. This is basically what the MAE and RMSE scores where telling me."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Below, I will plot actual and predicted AQI values for each city individually."
       ]
     },
     {
@@ -2520,6 +2673,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Once, again, this demonstrates that the model predicts the general pattern very well, but cannot account for the large spikes in either direction. Houston is noteable in that the prediction from 2015-06 to 2015-08 doesn't fit the actual data very well at all."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "---"
       ]
     },
@@ -2528,6 +2688,13 @@
       "metadata": {},
       "source": [
         "## Addition of Prediction and Residuals"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Lastly, I'm going to look at the residuals, the difference between the actual and predicted AQIs. This will give me an idea of where, and by how much, the model is failing."
       ]
     },
     {
@@ -2727,6 +2894,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "I am going to plot the residuals as this is a much better way to understand the patterns."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 135,
       "metadata": {},
@@ -2756,7 +2930,37 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "This plots makes it clear that during the warmer months, 2015-06 to 2015-10, the model does not predict as well as for 2015-01 to 2015-06 and 2015-10 to 2016-05. Looking at the data above, there is much more variation and spikes during this warmer part which the model cannot forecast. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Save Test Dataset to CSV"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Lastly, I will save to csv file, the test set with predictions and residuals for use in the dashboard."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 138,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "test_with_preds.to_csv(\"Dataset/ML_TestSet/pollution_us_test_set_predictions.csv\", index=False)"
       ]
     },
     {
@@ -2772,14 +2976,17 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "# Push files to Repo"
+        "## Conclusion and Next Steps"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* In cases where you don't need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
+        "* The best performing model (MAE) was Gradient Boosting Regressor\n",
+        "* The MAE was ~ 10, suggesting good general performance, but RMSE ~ 17 suggests the model struggles in predicting spikes\n",
+        "* Most important features and residuals have been plotted to help stakeholders understand the model\n",
+        "* As only default hyperparameters were tested, this should be optimised next"
       ]
     }
   ],
