ML write up updated

--- a/jupyter_notebooks/ML.ipynb
+++ b/jupyter_notebooks/ML.ipynb
@@ -1965,7 +1965,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "I define the pipeline, which uses a preprocessor step to scale numeric variables and One Hot encode categorical variables."
+        "I define the pipeline, which uses a preprocessor step to scale numeric variables and One Hot encode categorical variables. I have not transformed the numerical variables because this step is not usually helpful when using tree-based algorithms, which is what I will be using."
       ]
     },
     {
@@ -2284,7 +2284,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "This suggests that the model’s predictions have an average error of about 10 AQI units (MAE), meaning that, on average, the predicted AQI is off by 10 from the true value. The RMSE is higher at ~17, which indicates that there are some larger errors or spikes where the model under- or over-predicts AQI more substantially. Overall, the model captures the general trend reasonably well, but occasional extreme deviations contribute to the higher RMSE."
+        "This suggests that the model’s predictions have an average error of about 10 AQI units (MAE), meaning that, on average, the predicted AQI is off by 10 from the true value. The RMSE is higher at ~17, which indicates that there are some larger errors or spikes where the model under- or over-predicts AQI more substantially. Overall, the model captures the general trend reasonably well, but occasional extreme deviations contribute to the higher RMSE.\n",
+        "\n",
+        "The MAE for train was 11.25 and for test is 10.28, which is slightly better. Overall, this suggests that the model generalises pretty well but is underfitting based on RMSE. I believe it likely needs more data to predict better."
       ]
     },
     {
@@ -2984,7 +2986,8 @@
       "metadata": {},
       "source": [
         "* The best performing model (MAE) was Gradient Boosting Regressor\n",
-        "* The MAE was ~ 10, suggesting good general performance, but RMSE ~ 17 suggests the model struggles in predicting spikes\n",
+        "* The test MAE was ~ 10, suggesting good general performance, but RMSE ~ 17 suggests the model struggles to predict spikes\n",
+        "* Overall, the model generalises relatively well but is likely underfitted\n",
         "* Most important features and residuals have been plotted to help stakeholders understand the model\n",
         "* As only default hyperparameters were tested, this should be optimised next"
       ]
